--- a/mallards.ipynb
+++ b/mallards.ipynb
@@ -47,8 +47,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "5f7077ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       population  farmed       date       hour       mid  slatitude  \\\n",
+      "0              73       0 2012-09-12   15:32:58    3564.0  56.440033   \n",
+      "1              73       0 2012-09-12   16:32:22    3449.0  56.439972   \n",
+      "2              73       0 2012-09-12   17:29:51    3493.0  56.440144   \n",
+      "3              73       0 2012-09-12   18:28:04  161899.0  56.440147   \n",
+      "4              73       0 2012-09-14   15:26:23    3670.0  56.439632   \n",
+      "...           ...     ...        ...        ...       ...        ...   \n",
+      "19910         111       0 2012-10-03   18:46:46    3596.0  56.440178   \n",
+      "19911         111       0 2012-10-03   19:46:42    3622.0  56.439957   \n",
+      "19912         111       0 2012-10-03   20:47:04    3749.0  56.440022   \n",
+      "19913         111       0 2012-10-03   21:49:33    3566.0  56.440029   \n",
+      "19914         111       0 2012-10-03   22:48:59       NaN  56.440067   \n",
+      "\n",
+      "       slongitude      v2  \n",
+      "0       13.992838  737.60  \n",
+      "1       13.992728    9.58  \n",
+      "2       13.992794   19.55  \n",
+      "3       13.992643    9.29  \n",
+      "4       13.992536   59.98  \n",
+      "...           ...     ...  \n",
+      "19910   13.992034   80.75  \n",
+      "19911   13.992407   33.61  \n",
+      "19912   13.992071   21.88  \n",
+      "19913   13.992332   16.06  \n",
+      "19914   13.993050   44.34  \n",
+      "\n",
+      "[19915 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=pd.DataFrame(mallards)\n",
+    "features=df[[\"population\", \"farmed\", \"date\", \"hour\", \"mid\", \"slatitude\", \"slongitude\", \"v2\"]]\n",
+    "print(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "df70e7c0",
+   "id": "ac2ade38",
    "metadata": {},
    "outputs": [],
    "source": []
