making sense of how to use the dataframe.

--- a/mallards.ipynb
+++ b/mallards.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5f7077ac",
+   "id": "91e09dcc",
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +93,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "14879e2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    3564.0\n",
+      "Name: mid, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=[]\n",
+    "counter=0\n",
+    "\n",
+    "for x in range(0,len(features)):\n",
+    "    if(x==0):\n",
+    "        print(features.loc[:x,\"mid\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ac2ade38",
+   "id": "3094954e",
    "metadata": {},
    "outputs": [],
    "source": []
