Preparing the data.
Here is an effort to prepare the data in the form of 2 dimensional array, but something is off.

--- a/mallards.ipynb
+++ b/mallards.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "91e09dcc",
+   "id": "b4174874",
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "14879e2a",
+   "execution_count": 37,
+   "id": "6968a146",
    "metadata": {},
    "outputs": [
     {
@@ -102,23 +102,70 @@
      "output_type": "stream",
      "text": [
       "0    3564.0\n",
-      "Name: mid, dtype: float64\n"
+      "Name: mid, dtype: float64\n",
+      "=================================\n",
+      "[0        56.440033\n",
+      "1        56.439972\n",
+      "2        56.440144\n",
+      "3        56.440147\n",
+      "4        56.439632\n",
+      "           ...    \n",
+      "19910    56.440178\n",
+      "19911    56.439957\n",
+      "19912    56.440022\n",
+      "19913    56.440029\n",
+      "19914    56.440067\n",
+      "Name: slatitude, Length: 19915, dtype: float64, 0        13.992838\n",
+      "1        13.992728\n",
+      "2        13.992794\n",
+      "3        13.992643\n",
+      "4        13.992536\n",
+      "           ...    \n",
+      "19910    13.992034\n",
+      "19911    13.992407\n",
+      "19912    13.992071\n",
+      "19913    13.992332\n",
+      "19914    13.993050\n",
+      "Name: slongitude, Length: 19915, dtype: float64]\n"
      ]
     }
    ],
    "source": [
     "data=[]\n",
-    "counter=0\n",
+    "preddata = []\n",
     "\n",
     "for x in range(0,len(features)):\n",
     "    if(x==0):\n",
-    "        print(features.loc[:x,\"mid\"])"
+    "        print(features.loc[:x,\"mid\"])\n",
+    "    preddata.append([features.loc[:x,\"slatitude\"], features.loc[:x,\"slongitude\"]])\n",
+    "\n",
+    "print(\"=================================\")\n",
+    "print(preddata[len(preddata) - 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "292f916e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    56.440033\n",
+      "Name: slatitude, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preddata[0][0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3094954e",
+   "id": "9ef11735",
    "metadata": {},
    "outputs": [],
    "source": []
