Extracting predata. the date format is indeed an issue and more conditionals may be necessary.

--- a/mallards.ipynb
+++ b/mallards.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6968a146",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,13 @@
       "13.992353\n",
       "13.992284\n",
       "13.992304\n",
-      "13.99233\n",
+      "13.99233\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992343\n",
       "13.992743\n",
       "13.992844\n",
@@ -1187,13 +1193,7 @@
       "13.992404\n",
       "13.991927\n",
       "13.992245\n",
-      "13.992408\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992408\n",
       "13.992402\n",
       "13.992564\n",
       "13.991723\n",
@@ -2026,13 +2026,7 @@
       "13.99193\n",
       "13.991843\n",
       "13.991887\n",
-      "13.992189\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992189\n",
       "13.992861\n",
       "13.99175\n",
       "13.992643\n",
@@ -2060,7 +2054,13 @@
       "13.992433\n",
       "13.991529\n",
       "13.99209\n",
-      "13.993007\n",
+      "13.993007\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992511\n",
       "13.992679\n",
       "13.992483\n",
@@ -2876,13 +2876,7 @@
       "13.992677\n",
       "13.992827\n",
       "13.996896\n",
-      "13.992649\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992649\n",
       "13.992703\n",
       "13.992849\n",
       "13.992764\n",
@@ -2910,7 +2904,13 @@
       "13.993082\n",
       "13.993134\n",
       "13.992978\n",
-      "13.992975\n",
+      "13.992975\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992948\n",
       "13.992716\n",
       "13.993077\n",
@@ -3724,13 +3724,7 @@
       "13.992546\n",
       "13.992808\n",
       "13.992336\n",
-      "13.992076\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992076\n",
       "13.991798\n",
       "13.992332\n",
       "13.992332\n",
@@ -3781,7 +3775,13 @@
       "13.992404\n",
       "13.992351\n",
       "13.992373\n",
-      "13.992171\n",
+      "13.992171\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992401\n",
       "13.992437\n",
       "13.992289\n",
@@ -4569,13 +4569,7 @@
       "13.992688\n",
       "13.99178\n",
       "13.993195\n",
-      "13.992608\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992608\n",
       "14.009651\n",
       "13.49507\n",
       "13.992929\n",
@@ -4619,7 +4613,13 @@
       "13.992894\n",
       "13.992525\n",
       "13.992707\n",
-      "13.992424\n",
+      "13.992424\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992182\n",
       "13.992513\n",
       "13.992638\n",
@@ -5408,13 +5408,7 @@
       "13.992512\n",
       "13.992237\n",
       "13.992094\n",
-      "13.992571\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992571\n",
       "13.992599\n",
       "13.991813\n",
       "13.991937\n",
@@ -5489,7 +5483,13 @@
       "13.992378\n",
       "13.992371\n",
       "13.992204\n",
-      "13.992325\n",
+      "13.992325\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.99219\n",
       "13.992924\n",
       "13.992511\n",
@@ -6246,13 +6246,7 @@
       "13.992856\n",
       "13.992503\n",
       "13.992268\n",
-      "13.992345\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992345\n",
       "13.992328\n",
       "13.991877\n",
       "13.991945\n",
@@ -6338,7 +6332,13 @@
       "13.991947\n",
       "13.992397\n",
       "13.991889\n",
-      "13.991992\n",
+      "13.991992\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992439\n",
       "13.991997\n",
       "13.98951\n",
@@ -7114,13 +7114,7 @@
       "13.992075\n",
       "13.992431\n",
       "13.992451\n",
-      "13.99258\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.99258\n",
       "13.991696\n",
       "13.992817\n",
       "13.992512\n",
@@ -7196,7 +7190,13 @@
       "13.991754\n",
       "13.992\n",
       "13.991474\n",
-      "13.991474\n",
+      "13.991474\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.99181\n",
       "13.99228\n",
       "13.992389\n",
@@ -7982,13 +7982,7 @@
       "13.992422\n",
       "13.992319\n",
       "13.992348\n",
-      "13.992553\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992553\n",
       "13.992297\n",
       "13.994485\n",
       "13.992252\n",
@@ -8042,7 +8036,13 @@
       "13.992371\n",
       "13.992275\n",
       "13.99167\n",
-      "13.992372\n",
+      "13.992372\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992282\n",
       "13.99245\n",
       "13.993579\n",
@@ -8821,13 +8821,7 @@
       "13.992249\n",
       "13.990672\n",
       "13.990672\n",
-      "13.992748\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992748\n",
       "13.99194\n",
       "13.991674\n",
       "13.99248\n",
@@ -8880,7 +8874,13 @@
       "13.99228\n",
       "13.99245\n",
       "13.992332\n",
-      "13.992558\n",
+      "13.992558\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992494\n",
       "13.992488\n",
       "13.992537\n",
@@ -9673,13 +9673,7 @@
       "13.992582\n",
       "13.992306\n",
       "13.992284\n",
-      "13.992456\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992456\n",
       "13.992397\n",
       "13.992467\n",
       "13.992162\n",
@@ -9714,7 +9708,13 @@
       "13.992599\n",
       "13.991796\n",
       "13.992277\n",
-      "13.991938\n",
+      "13.991938\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992155\n",
       "13.984083\n",
       "13.992339\n",
@@ -10514,13 +10514,7 @@
       "13.992418\n",
       "13.992329\n",
       "13.992323\n",
-      "13.992397\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992397\n",
       "13.992679\n",
       "13.992306\n",
       "13.992267\n",
@@ -10565,7 +10559,13 @@
       "13.992605\n",
       "13.992683\n",
       "13.992538\n",
-      "13.992482\n",
+      "13.992482\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992168\n",
       "13.99205\n",
       "13.992178\n",
@@ -11352,13 +11352,7 @@
       "14.012731\n",
       "14.013047\n",
       "14.012644\n",
-      "13.990317\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.990317\n",
       "13.99027\n",
       "13.990112\n",
       "13.990062\n",
@@ -11406,7 +11400,13 @@
       "14.012753\n",
       "14.012806\n",
       "14.012875\n",
-      "14.013334\n",
+      "14.013334\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "14.012816\n",
       "14.012806\n",
       "14.012794\n",
@@ -12200,13 +12200,7 @@
       "13.995402\n",
       "13.996043\n",
       "13.996435\n",
-      "13.997084\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.997084\n",
       "13.995278\n",
       "13.995287\n",
       "13.997196\n",
@@ -12247,7 +12241,13 @@
       "13.997048\n",
       "13.990515\n",
       "13.990405\n",
-      "13.989176\n",
+      "13.989176\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.99036\n",
       "13.990294\n",
       "13.990301\n",
@@ -13039,13 +13039,7 @@
       "13.991903\n",
       "13.99173\n",
       "13.991927\n",
-      "13.991819\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.991819\n",
       "13.991861\n",
       "13.992389\n",
       "13.992344\n",
@@ -13101,7 +13095,13 @@
       "13.991377\n",
       "13.991406\n",
       "13.991307\n",
-      "13.991462\n",
+      "13.991462\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.991343\n",
       "13.991152\n",
       "13.991158\n",
@@ -13880,13 +13880,7 @@
       "13.991273\n",
       "13.993204\n",
       "13.869502\n",
-      "13.869427\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.869427\n",
       "13.869494\n",
       "13.869626\n",
       "13.868964\n",
@@ -13943,7 +13937,13 @@
       "13.992334\n",
       "13.992409\n",
       "13.992344\n",
-      "13.992281\n",
+      "13.992281\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992329\n",
       "13.992366\n",
       "13.992892\n",
@@ -14734,13 +14734,7 @@
       "14.012665\n",
       "14.012863\n",
       "13.971173\n",
-      "13.970601\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.970601\n",
       "13.973468\n",
       "13.97369\n",
       "13.973715\n",
@@ -14783,7 +14777,13 @@
       "14.013074\n",
       "14.012605\n",
       "14.012736\n",
-      "14.012662\n",
+      "14.012662\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "14.012697\n",
       "14.012923\n",
       "14.012625\n",
@@ -15584,13 +15584,7 @@
       "13.990992\n",
       "13.992388\n",
       "13.992095\n",
-      "13.991518\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.991518\n",
       "13.991788\n",
       "13.99166\n",
       "13.99267\n",
@@ -15635,7 +15629,13 @@
       "13.992087\n",
       "13.992457\n",
       "13.992338\n",
-      "13.992087\n",
+      "13.992087\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992497\n",
       "13.99262\n",
       "13.992142\n",
@@ -16437,13 +16437,7 @@
       "13.992476\n",
       "13.992516\n",
       "13.991726\n",
-      "13.991752\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.991752\n",
       "13.992188\n",
       "13.992355\n",
       "13.992574\n",
@@ -16472,7 +16466,13 @@
       "13.992437\n",
       "13.992432\n",
       "13.992349\n",
-      "13.992397\n",
+      "13.992397\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992472\n",
       "13.992324\n",
       "13.992344\n",
@@ -17276,13 +17276,7 @@
       "13.991511\n",
       "13.992197\n",
       "13.992113\n",
-      "13.992484\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992484\n",
       "13.992362\n",
       "13.991931\n",
       "13.992431\n",
@@ -17313,7 +17307,13 @@
       "13.992431\n",
       "13.992283\n",
       "13.992364\n",
-      "13.992364\n",
+      "13.992364\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992332\n",
       "13.993082\n",
       "13.992708\n",
@@ -18114,13 +18114,7 @@
       "13.992387\n",
       "13.992324\n",
       "13.992458\n",
-      "13.992386\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992386\n",
       "13.992297\n",
       "13.992128\n",
       "13.992259\n",
@@ -18150,7 +18144,13 @@
       "13.99229\n",
       "13.992181\n",
       "13.992414\n",
-      "13.992367\n",
+      "13.992367\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.99263\n",
       "13.992329\n",
       "13.992236\n",
@@ -18951,13 +18951,7 @@
       "13.992467\n",
       "13.992781\n",
       "13.992864\n",
-      "13.992938\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992938\n",
       "13.99189\n",
       "13.991954\n",
       "13.992415\n",
@@ -18985,7 +18979,13 @@
       "13.99236\n",
       "13.993441\n",
       "13.99278\n",
-      "13.99287\n",
+      "13.99287\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992006\n",
       "13.992509\n",
       "13.992187\n",
@@ -19803,13 +19803,7 @@
       "13.992299\n",
       "13.992299\n",
       "13.992158\n",
-      "13.992414\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13.992414\n",
       "13.9928\n",
       "13.992469\n",
       "13.992273\n",
@@ -19837,7 +19831,13 @@
       "13.992386\n",
       "13.992531\n",
       "13.992321\n",
-      "13.992516\n",
+      "13.992516\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "13.992534\n",
       "13.992462\n",
       "13.992011\n",
@@ -20419,7 +20419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "292f916e",
    "metadata": {},
    "outputs": [
@@ -20623,7 +20623,7 @@
        "[19914 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20634,8 +20634,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ef11735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preddata.to_excel(\"preddata.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "363e01b3",
    "metadata": {},
    "outputs": [],
    "source": []
