--- a/intended regression/transformed model without date and hour/mallards.ipynb
+++ b/intended regression/transformed model without date and hour/mallards.ipynb
@@ -21598,7 +21598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -21612,7 +21612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
