Fix: Remove the "Unnamed" Column Bug

--- a/intended regression v2/mallards.ipynb
+++ b/intended regression v2/mallards.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "52b3263f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,8 +21,8 @@
     "from sklearn import tree\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "mallards=pd.read_excel(\"Mallards_initial data.xlsx\")"
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense"
    ]
   },
   {
@@ -37,6 +45,8 @@
     }
    ],
    "source": [
+    "mallards=pd.read_excel(\"Mallards_initial data.xlsx\")\n",
+    "mallards = mallards.loc[:, ~mallards.columns.str.contains('^Unnamed')]\n",
     "print(mallards.tail(5))"
    ]
   },
@@ -483,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "fffd66ba",
    "metadata": {},
    "outputs": [
@@ -575,7 +585,7 @@
        "15795    0.939869 -0.524242   0.125983    0.133088 2012-09-24   03:42:26"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "9b8ac7cb",
    "metadata": {},
    "outputs": [
@@ -678,7 +688,7 @@
        "9210    -0.229908 -0.524242   0.121909    0.135181 2012-09-08   17:41:04"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
