Implement the Model.

--- a/intended regression v2/mallards.ipynb
+++ b/intended regression v2/mallards.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "52b3263f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -21,6 +13,7 @@
     "from sklearn import tree\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense"
    ]
@@ -699,8 +692,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5793c78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_units = 32\n",
+    "activation = 'relu'\n",
+    "loss_function = 'mean_squared_error'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "30d2973a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Dense(n_units, activation=activation, input_shape=(X_train_scaled_df.shape[1],)))\n",
+    "model.add(Dense(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "239913bd",
    "metadata": {},
    "outputs": [],
    "source": []
